Toggle delete btn and add delete method plan

--- a/locale/en/corteza-webapp-compose/notification.yaml
+++ b/locale/en/corteza-webapp-compose/notification.yaml
@@ -86,6 +86,7 @@ page:
   cloneFailed: Could not clone this page
   deleteFailed: Could not delete this page
   iconFetchFailed: Could not fetch list of icons
+  iconUndeleteFailed:  Could not delete selected icon
   loadFailed: Could not load the page tree
   noPages: No pages found
   saveFailed: Could not save this page
