Add changes detection to record editing

--- a/locale/en/corteza-webapp-compose/general.yaml
+++ b/locale/en/corteza-webapp-compose/general.yaml
@@ -174,3 +174,5 @@ variants:
   success: Success
   danger: Danger
   warning: Warning
+editor:
+  unsavedChanges:  Unsaved changes will be lost. Do you wish to leave the page?
